# tinyrenderer_tutorial

./: CMakeLists.txt  FaceData.h  Model.cpp  Model.h  Vector2D.h  Vector3D.h  main.cpp  shape_drawing.cpp  shape_drawing.h  tgaimage.cpp  tgaimage.h  triangle_drawing.cpp  triangle_drawing.h
data/: diablo
